# file_watcher_automation_mvp

./: .gitignore  README.md  pyproject.toml
file_watcher/: archive.py  cli.py  contract.py  event_builder.py  event_log.py  watcher.py  workflow_trigger.py
file_watcher_automation_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_archive.py  test_cli.py  test_event_builder.py  test_event_log.py  test_watch_options.py  test_watcher.py  test_workflow_trigger.py
workflows/: sample.workflow.json
